[package]
name = "mozui-renderer"
version.workspace = true
edition.workspace = true

[dependencies]
mozui-style = { workspace = true }
mozui-platform = { workspace = true }
wgpu = { workspace = true }
raw-window-handle = { workspace = true }
tracing = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
mozui-text = { workspace = true }
cosmic-text = { workspace = true }
swash = { workspace = true }
rustc-hash = { workspace = true }
resvg = "0.47.0"
tiny-skia = "0.12.0"
mozui-icons = { version = "0.1.0", path = "../mozui-icons" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
